--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,5 +1,5 @@
 //Imports
-@import "variables", "chevron", "cards", "carouselSwipper", "adn", "borderEfect", "rotate";
+@import "variables", "responsive" ,"chevron", "cards", "carouselSwipper", "adn", "borderEfect", "rotate";
 *{
     margin: 0;
     padding: 0;
@@ -196,13 +196,13 @@ header{
                 text-align: center;
                 margin: 1em;
             }
-            .servicioPrincipal_star{
+/*             .servicioPrincipal_star{
                 width: 50px;
                 height: 50px;
                 animation: girar 5s infinite linear;
                 transform-style: preserve-3d;
                 perspective: 1000px;
-            }
+            } */
             .stars_icon{
                 font-size: 40px;
                 width: 40px;
@@ -273,10 +273,7 @@ header{
         @include margin__Espaciado(2em,2em);
     }
     .container_content_impulso{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        @include flex__ColumnCenterAll;
         width: 25%;
         min-width: 22rem;
         max-width: 20rem;
@@ -285,6 +282,15 @@ header{
         @include margin__Espaciado(1em,1em);
         box-shadow: rgba(87, 169, 218, 0.884) 3px 4px 17px;
         border-radius: 15pt;
+        transition: all 1s ease-in-out;
+        &:hover{
+            box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
+            .container_impulso_speach{
+                .impulso_title{
+                    color: $color_naranja_cohete;
+                }
+            };  
+        }
         .contenedor_impulso_img{
             width: 8rem;
             height: 8rem;
@@ -318,6 +324,7 @@ header{
                 font-family: $letra__principal;
                 color: $color_celeste_oscuro;
                 width: 100%;
+                transition: all 1s ease-in-out;
             }
             .impulso_paragraph{
                 @include p;
@@ -579,9 +586,12 @@ header{
             flex-direction: column;
             width: 100%;
             max-width: 350px;
-            color: $color_gris_claro;
+            color: $color_naranja_cohete;
             font-family: $letra__secundaria;
             font-weight: bold;
+        }
+        .section__formulario__contenedor__form-input{
+            padding: 5px;
         }
         .contenedor_checkbox{
             display: flex;
@@ -825,309 +835,4 @@ footer{
         width: 70%;
     }
 }
-//Responsive
-@media screen and (max-width: 1100px) {
-    header{
-        .contenedor_logo_header{
-            width: 30%;
-        }
-    }
-    .section_nosotros{
-        .beneficios_container{
-            flex-direction: row;
-            flex-wrap: wrap;
-            .beneficio_content{
-                width: 40%;
-                margin: 1em;
-            }
-        }
-    }
-    .section_servicios{
-        .cardsImpulsos_container{
-            flex-wrap: wrap;
-        }
-        .container_content_impulso{
-            margin-right: 2em;
-            margin-left: 2em;
-            width: 30%;
-        }
-    }
-}
-@media screen and (max-width: 998px){
-    header{
-        .contenedor_logo_header{
-            width: 20%;
-        }
-        .contenedor_header_secciones{
-            width: 80%;
-        }
-    }
-    .section_nosotros{
-        .contenedor_nosotros_quienesSomos{
-            width: 80%;
-        }
-        .contenedor_nosotros_Speach{
-            width: 80%;
-        }
-    }
-    .section_contacto{
-        form{
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            h3{
-                width: 100%;
-                text-align: center;
-                @include margin__Espaciado(1em,1em);
-            }
-        }
-        .formulario_contenedor_datos{
-            width: 100%;
-            align-items: center;
-            justify-content: center;
-            @include margin__Espaciado(1em,1em);
-        }
-        .formulario_contenedor_textarea{
-            width: 100%;
-            align-items: center;
-            justify-content: center;
-            @include margin__Espaciado(1em,1em);
-            .contenedor_btn_formulario{
-                .btn_formulario{
-                    width: 25%;
-                }
-            }
-        }
-    }
-}
-@media screen and (max-width: 900px) {
-    header nav{
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-    header{
-        .center {
-            display: block;
-            top: 50%;
-            right: 10%;
-            transform: translate(-50%, -50%);
-            @include compatibilidad_transform(translate(-50%, -50%));
-            position: relative;
-            width: 40px;
-        }    
-        .center:before,
-        .center:after,
-        .center div {
-            background: $color_celeste_oscuro;
-            content: "";
-            display: block;
-            height: 6px;
-            border-radius: 3px;
-            margin: 7px 0;
-            transition: .5s;
-            @include compatibilidad_transition(.5s)
-        }
-        .center:hover:before {
-            transform: translateY(12px) rotate(135deg);
-            @include compatibilidad_transform(translateY(12px) rotate(135deg));
-        }
-        .center:hover:after {
-            transform: translateY(-12px) rotate(-135deg);
-            @include compatibilidad_transform(translateY(-12px) rotate(-135deg));
-        }
-        .center:hover div {
-            transform: scale(0);
-            @include compatibilidad_transform(scale(0));
-        }
-        .contenedor_header_secciones{
-            width: 100%;
-            max-height: 0;
-            overflow: hidden;
-            flex-direction: column;
-        }
-        .list{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-        }
-        .contenedor_burgerMenu{
-            display: inline-flex;
-            cursor: pointer;
-            width: 30%;
-            justify-content: flex-end;
-            align-items: baseline;
-        }
-        .burger_menu{
-            width: 30px;
-            height: 30px;
-            display: flex;
-        }
-        .anchord_secciones{
-            padding: 1em;
-        }
-        #toggler:checked ~ .contenedor_header_secciones{
-            max-height: 100%;
-        }
-        .socialMedia{
-            @include margin__Espaciado(1em,1em);
-        }
-    }
 
-}
-@media screen and (max-width: 920px){
-    .section_contacto{
-        .formulario_contenedor_textarea{
-            .contenedor_btn_formulario{
-                .btn_formulario{
-                    min-width: 170px;
-                }
-            }
-        }
-    }
-}
-@media screen and (max-width: 768px){
-    .socialMedia_anchord i, .socialMedia_anchord img{
-        margin-bottom: 1em;
-    }
-    .section_servicios{
-        .container_content_impulso{
-            flex-direction: column;
-            width: 100%;
-            min-width: 16rem;
-            @include margin__Espaciado(1em,2em);
-        }
-        .servicio_principal_container{
-            .caminoDigital_paragraph{
-                width: 90%;
-            }
-            .impulsos_container{
-                width: 90%;
-                .impulsos_content{
-                    min-width: 280px;
-                    margin: 1em;
-                }
-            }
-            .containerStar{
-                width: 90%;
-            }
-        }
-        .caminoDigital_pie{
-            width: 90%;
-        }
-        .carousel_title {
-            width: 80%;
-        }
-    }
-    .section_nosotros{
-        article{
-            .contenedor_nosotros_quienesSomos,.contenedor_nosotros_Speach{
-                width: 90%;
-            }
-        }
-        .nosotros_valores_title_container{
-            .nosotros_valores_paragraph{
-                width: 90%;
-            }
-        }
-        //adn valores
-        .nosotros_valores_container{
-            flex-direction: row;
-            flex-wrap: nowrap;
-            .valores_container{
-                flex-direction: column;
-                .valores_content{
-                    @include margin__Espaciado(1em,1em);
-                    min-width: 130px;
-                }
-            }
-        }
-        .nosotros_mision_container{
-            .nosotros_mision_paragraph{
-                width: 90%;
-            }
-        }
-    }
-    .section_contacto{
-        .contacto_redesUbicacion{
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            .containerRedes{
-                width: 100%;
-                .contacto_redes{
-                    flex-direction: row;
-                    flex-wrap: nowrap;
-                    width: 80%;
-                }
-            }
-            .container_ubicacion{
-                width: 100%;
-            }          
-        }
-        .contacto_calendly{
-            .contacto_calendly_title{
-                width: 90%;
-            }
-        }
-    }
-}
-@media screen and (max-width: 468px) {
-    .section_nosotros{
-        .beneficios_container{
-            flex-direction: column;
-            .beneficio_content{
-                width: 50%;
-                margin: 1em;
-            }
-        }
-    }
-    .section_servicios{
-        .servicio_principal_container{
-            .containerStar{
-                flex-direction: column;
-                .servicioPrincipal_title{
-                    width: 90%;
-                }
-            }
-            .impulsos_container{
-                flex-direction: column;
-                .impulsos_content{
-                    min-width: 80%;
-                }
-            }   
-        }
-    }
-    .section_contacto{
-        .contacto_redes_container{
-            .contacto_redes{
-                width: 80%;
-            }
-        }
-    }
-}
-@media screen and (max-width: 320px) {
-    .section_nosotros{
-        .beneficios_container{
-            flex-direction: column;
-            .beneficio_content{
-                width: 80%;
-                margin: 1em;
-            }
-        }
-    }
-}
-@media screen and (min-width: 768px){
-    /*Footer Media +768*/ 
-    footer{
-        .footer__logo{
-            width: calc(6em + 6vw);
-            @include margin__Espaciado(0,0);
-        }
-        /*CIerra Footer Media +768*/
-    }
-
-}
-@media screen and (min-width: 1200px){
-
-}
